--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@iconify-json/simple-icons": "^1.1.102",
     "@iconify-json/uil": "^1.1.8",
     "@tailwindcss/typography": "^0.5.13",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "astro": "^4.11.3",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.2",
