--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@iconify-json/bx": "^1.1.10",
     "@iconify-json/simple-icons": "^1.1.102",
     "@iconify-json/uil": "^1.1.8",
+    "@iconify/tailwind": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
