--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.0.1",
-    "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/bricolage-grotesque": "^5.0.6",
-    "@fontsource-variable/inter": "^5.0.18",
+    "@fontsource-variable/inter": "^5.0.19",
     "@fontsource/handlee": "^5.0.19",
     "@fontsource/m-plus-rounded-1c": "^5.0.13",
     "@iconify-json/bx": "^1.1.10",
-    "@iconify-json/simple-icons": "^1.1.102",
+    "@iconify-json/simple-icons": "^1.1.109",
     "@iconify-json/uil": "^1.1.8",
     "@iconify/tailwind": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "astro": "^4.11.3",
+    "astro": "^4.12.2",
     "astro-icon": "^1.1.0",
-    "astro-navbar": "^2.3.2",
-    "astro-seo": "^0.8.3",
+    "astro-navbar": "^2.3.3",
+    "astro-seo": "^0.8.4",
+    "flowbite": "^2.4.1",
     "sharp": "^0.33.4",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.6"
   }
 }
